force-app/main/default/objects/BonusIncentivesCalculation__c/BonusIncentivesCalculation__c.object-meta.xml
<CustomObject>
    <label>Bonus &amp; INCC Cal</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>BONUS &amp; INCENTIVES ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus &amp; INCC Cal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>