force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AccumulatedIncentives__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedIncentives__c</fullName>
    <formula>JanGrossIncentives__c +
FebGrossIncentives__c +
MarGrossIncentives__c +
AprGrossIncentives__c +
MayGrossIncentives__c +
JunGrossIncentives__c +
JulGrossIncentives__c +
AugGrossIncentives__c +
SepGrossIncentives__c +
OctGrossIncentives__c +
NovGrossIncentives__c +
DecGrossIncentives__c</formula>
    <inlineHelpText>Total Sum of Gross Incentives from Jan to Dec.</inlineHelpText>
    <label>ACCUMULATED INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>