force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AllocatedMonthlyTarget__c.field-meta.xml
<CustomField>
    <fullName>AllocatedMonthlyTarget__c</fullName>
    <label>ALLOCATED MONTHLY TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>