force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AprAchievement__c.field-meta.xml
<CustomField>
    <fullName>AprAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.APRAchievement__c</formula>
    <label>APR ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>