force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AprBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>AprBonusIncentiveRate__c</fullName>
    <label>APR BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>