force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AprGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>AprGrossIncentives__c</fullName>
    <formula>(AprPerformance__c - MinimumAmountForIncentive__c ) * AprBonusIncentiveRate__c</formula>
    <inlineHelpText>Apr Gross Incentives = Apr Bonus &amp; Incentives Rate*(Apr Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>APR GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>