force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AprPerformance__c.field-meta.xml
<CustomField>
    <fullName>AprPerformance__c</fullName>
    <formula>IndividualPerformanceID__r.APRPerformance__c</formula>
    <label>APR PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>