force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AugBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>AugBonusIncentiveRate__c</fullName>
    <label>AUG BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>