force-app/main/default/objects/BonusIncentivesCalculation__c/fields/AugGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>AugGrossIncentives__c</fullName>
    <formula>(AugPerformance__c - MinimumAmountForIncentive__c ) * AugBonusIncentiveRate__c</formula>
    <inlineHelpText>Aug Gross Incentives = Aug Bonus &amp; Incentives Rate*(Aug Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>AUG GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>