force-app/main/default/objects/BonusIncentivesCalculation__c/fields/BaseSalary__c.field-meta.xml
<CustomField>
    <fullName>BaseSalary__c</fullName>
    <label>BASE SALARY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>