force-app/main/default/objects/BonusIncentivesCalculation__c/fields/BasisNumber__c.field-meta.xml
<CustomField>
    <fullName>BasisNumber__c</fullName>
    <label>BASIS NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>