force-app/main/default/objects/BonusIncentivesCalculation__c/fields/BonusIncentivePolicyID__c.field-meta.xml
<CustomField>
    <fullName>BonusIncentivePolicyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BONUS &amp; INCENTIVE POLICY ID</label>
    <referenceTo>BonusIncentivesPolicy__c</referenceTo>
    <relationshipName>INCENTIVES</relationshipName>
    <type>Lookup</type>
</CustomField>