force-app/main/default/objects/BonusIncentivesCalculation__c/fields/CaculationFormula__c.field-meta.xml
<CustomField>
    <fullName>CaculationFormula__c</fullName>
    <label>CALCULATION FORMULA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncentiveFormula</valueSetName>
    </valueSet>
</CustomField>