force-app/main/default/objects/BonusIncentivesCalculation__c/fields/DecAchievement__c.field-meta.xml
<CustomField>
    <fullName>DecAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.DECAchievement__c</formula>
    <label>DEC ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>