force-app/main/default/objects/BonusIncentivesCalculation__c/fields/DecGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>DecGrossIncentives__c</fullName>
    <formula>(DecPerformance__c - MinimumAmountForIncentive__c ) * DecBonusIncentiveRate__c</formula>
    <inlineHelpText>Dec Gross Incentives = Dec Bonus &amp; Incentives Rate*(Dec Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>DEC GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>