force-app/main/default/objects/BonusIncentivesCalculation__c/fields/DecPerformance__c.field-meta.xml
<CustomField>
    <fullName>DecPerformance__c</fullName>
    <formula>IndividualPerformanceID__r.DECPerformance__c</formula>
    <label>DEC PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>