force-app/main/default/objects/BonusIncentivesCalculation__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <label>EMPLOYEE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>