force-app/main/default/objects/BonusIncentivesCalculation__c/fields/FebAchievement__c.field-meta.xml
<CustomField>
    <fullName>FebAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.MARAchievement__c</formula>
    <label>FEB ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>