force-app/main/default/objects/BonusIncentivesCalculation__c/fields/FebBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>FebBonusIncentiveRate__c</fullName>
    <label>FEB BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>