force-app/main/default/objects/BonusIncentivesCalculation__c/fields/FebGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>FebGrossIncentives__c</fullName>
    <formula>(FebPerformance__c - MinimumAmountForIncentive__c ) * FebBonusIncentiveRate__c</formula>
    <inlineHelpText>Feb Gross Incentives = Feb Bonus &amp; Incentives Rate*(Feb Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>FEB GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>