force-app/main/default/objects/BonusIncentivesCalculation__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>BONUS &amp; INCENTIVE FREQUENCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncentiveFrequencyType</valueSetName>
    </valueSet>
</CustomField>