force-app/main/default/objects/BonusIncentivesCalculation__c/fields/IncentivesEndDate__c.field-meta.xml
<CustomField>
    <fullName>IncentivesEndDate__c</fullName>
    <label>INCENTIVES END DATE</label>
    <type>Date</type>
</CustomField>