force-app/main/default/objects/BonusIncentivesCalculation__c/fields/IncentivesStartDate__c.field-meta.xml
<CustomField>
    <fullName>IncentivesStartDate__c</fullName>
    <label>INCENTIVES START DATE</label>
    <type>Date</type>
</CustomField>