force-app/main/default/objects/BonusIncentivesCalculation__c/fields/IndividualPerformanceID__c.field-meta.xml
<CustomField>
    <fullName>IndividualPerformanceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INDIVIDUAL PERFORMANCE ID</label>
    <referenceTo>IndividualPerformance__c</referenceTo>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>