force-app/main/default/objects/BonusIncentivesCalculation__c/fields/IndividualPerformanceName__c.field-meta.xml
<CustomField>
    <fullName>IndividualPerformanceName__c</fullName>
    <label>INDIVIDUAL PERFORMANCE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>