force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JanBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>JanBonusIncentiveRate__c</fullName>
    <label>JAN BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>