force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JanPerformance__c.field-meta.xml
<CustomField>
    <fullName>JanPerformance__c</fullName>
    <formula>IndividualPerformanceID__r.JANPerformance__c</formula>
    <label>JAN PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>