force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JulAchievement__c.field-meta.xml
<CustomField>
    <fullName>JulAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.JULAchievement__c</formula>
    <label>JUL ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>