force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JulBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>JulBonusIncentiveRate__c</fullName>
    <label>JUL BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>