force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JulGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>JulGrossIncentives__c</fullName>
    <formula>(JulPerformance__c - MinimumAmountForIncentive__c ) * JulBonusIncentiveRate__c</formula>
    <inlineHelpText>Jul Gross Incentives = Jul Bonus &amp; Incentives Rate*(Jul Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>JUL GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>