force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JunAchievement__c.field-meta.xml
<CustomField>
    <fullName>JunAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.JUNAchievement__c</formula>
    <label>JUN ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>