force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JunBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>JunBonusIncentiveRate__c</fullName>
    <label>JUN BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>