force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JunGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>JunGrossIncentives__c</fullName>
    <formula>(JunPerformance__c - MinimumAmountForIncentive__c ) * JunBonusIncentiveRate__c</formula>
    <inlineHelpText>Jun Gross Incentives = Jun Bonus &amp; Incentives Rate*(Jun Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>JUN GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>