force-app/main/default/objects/BonusIncentivesCalculation__c/fields/JunPerformance__c.field-meta.xml
<CustomField>
    <fullName>JunPerformance__c</fullName>
    <formula>IndividualPerformanceID__r.JUNPerformance__c</formula>
    <label>JUN PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>