force-app/main/default/objects/BonusIncentivesCalculation__c/fields/KPIID__c.field-meta.xml
<CustomField>
    <fullName>KPIID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI ID</label>
    <referenceTo>KPI__c</referenceTo>
    <relationshipName>BonusIncentives</relationshipName>
    <type>Lookup</type>
</CustomField>