force-app/main/default/objects/BonusIncentivesCalculation__c/fields/MarGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>MarGrossIncentives__c</fullName>
    <formula>(FebPerformance__c - MinimumAmountForIncentive__c ) * FebBonusIncentiveRate__c</formula>
    <inlineHelpText>Mar Gross Incentives = Mar Bonus &amp; Incentives Rate*(Mar Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>MAR GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>