force-app/main/default/objects/BonusIncentivesCalculation__c/fields/MayAchievement__c.field-meta.xml
<CustomField>
    <fullName>MayAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.MAYAchievement__c</formula>
    <label>MAY ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>