force-app/main/default/objects/BonusIncentivesCalculation__c/fields/MayGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>MayGrossIncentives__c</fullName>
    <formula>(MayPerformance__c - MinimumAmountForIncentive__c ) * MayBonusIncentiveRate__c</formula>
    <inlineHelpText>May Gross Incentives = May Bonus &amp; Incentives Rate*(May Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>MAY GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>