force-app/main/default/objects/BonusIncentivesCalculation__c/fields/MayPerformance__c.field-meta.xml
<CustomField>
    <fullName>MayPerformance__c</fullName>
    <formula>IndividualPerformanceID__r.MAYPerformance__c</formula>
    <label>MAY PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>