force-app/main/default/objects/BonusIncentivesCalculation__c/fields/MinimumAmountForIncentive__c.field-meta.xml
<CustomField>
    <fullName>MinimumAmountForIncentive__c</fullName>
    <formula>BaseSalary__c  *  BasisNumber__c</formula>
    <inlineHelpText>Minimum Amount for Incentives = Base Salary * Basis Number</inlineHelpText>
    <label>MINIMUM AMOUNT FOR INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>