force-app/main/default/objects/BonusIncentivesCalculation__c/fields/NovBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>NovBonusIncentiveRate__c</fullName>
    <label>NOV BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>