force-app/main/default/objects/BonusIncentivesCalculation__c/fields/OctAchievement__c.field-meta.xml
<CustomField>
    <fullName>OctAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.OCTAchievement__c</formula>
    <label>OCT ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>