force-app/main/default/objects/BonusIncentivesCalculation__c/fields/OctBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>OctBonusIncentiveRate__c</fullName>
    <label>OCT BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>