force-app/main/default/objects/BonusIncentivesCalculation__c/fields/OctGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>OctGrossIncentives__c</fullName>
    <formula>(OCTPerformance__c - MinimumAmountForIncentive__c ) * OctBonusIncentiveRate__c</formula>
    <inlineHelpText>Oct Gross Incentives = Oct Bonus &amp; Incentives Rate*(Oct Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>OCT GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>