force-app/main/default/objects/BonusIncentivesCalculation__c/fields/OCTPerformance__c.field-meta.xml
<CustomField>
    <fullName>OCTPerformance__c</fullName>
    <formula>IndividualPerformanceID__r.OCTPerformance__c</formula>
    <label>OCT PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>