force-app/main/default/objects/BonusIncentivesCalculation__c/fields/SepAchievement__c.field-meta.xml
<CustomField>
    <fullName>SepAchievement__c</fullName>
    <formula>IndividualPerformanceID__r.SEPAchievement__c</formula>
    <label>SEP ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>