force-app/main/default/objects/BonusIncentivesCalculation__c/fields/SepBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>SepBonusIncentiveRate__c</fullName>
    <label>SEP BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>