force-app/main/default/objects/BonusIncentivesCalculation__c/fields/SepGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>SepGrossIncentives__c</fullName>
    <formula>(SepPerformance__c - MinimumAmountForIncentive__c ) * SepBonusIncentiveRate__c</formula>
    <inlineHelpText>Sep Gross Incentives = Sep Bonus &amp; Incentives Rate*(Sep Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>SEP GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>