force-app/main/default/objects/BonusIncentivesCalculation__c/fields/SepPerformance__c.field-meta.xml
<CustomField>
    <fullName>SepPerformance__c</fullName>
    <formula>IndividualPerformanceID__r.SEPPerformance__c</formula>
    <label>SEP PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>